--- a/tv/index.html
+++ b/tv/index.html
@@ -89,7 +89,7 @@
       <span class="modal_close">x</span> <!-- Кнoпкa зaкрыть -->
       <!-- Тут любoе сoдержимoе -->
         <center>
-        <iframe width="650" height="488" src="https://www.youtube.com/embed/D0t1bR1Qjsg" frameborder="0" allowfullscreen id='v1'></iframe>
+        <iframe width="auto" height="auto" src="https://www.youtube.com/embed/D0t1bR1Qjsg" frameborder="0" allowfullscreen id='v1'></iframe>
         </center>
 </div>
  
