--- a/tv2/index.html
+++ b/tv2/index.html
@@ -157,7 +157,7 @@
 
 		<div class="mainw" id="conect">
 			<h1>Связаться  с нами через <span style="color:lime">Whats'App:</span></h1>
-			<button type="button" class="btn btn-success btm-large maxi"><a href="https://wa.me/77778683598?text=Хочу%20подключить%20IP-TV" class="whatsup">ПОДКЛЮЧИТЬСЯ</a></button>
+			<button type="button" class="btn btn-success btm-large maxi" style="text-align: center;"><a href="https://wa.me/77778683598?text=Хочу%20подключить%20IP-TV" class="whatsup">ПОДКЛЮЧИТЬСЯ</a></button>
 			
 		</div>
 
