--- a/tv2/index.html
+++ b/tv2/index.html
@@ -35,7 +35,7 @@
        <li class="nav-item">
         <a class="nav-link" href="index.html#prava">Для правообладателей</a>
       </li>
-      
+
     </ul>
   </div>
 </nav>
@@ -45,8 +45,8 @@
 			<h1>WELCOME TO <span class = "cuba">IP-TV</span></h1>
 			<p>Это самый современный и выгодный вариант с точки зрения «качество+возможности». В дом приходит по тому же кабелю, что и интернет, поставляет огромное количество местных и зарубежных каналов, всегда высокое качество картинки, полноценные возможности SMART-TV. </p>
 		</div>
-	
-		<div class = "container" id="otele">
+
+		<!-- <div class = "container" id="otele">
 			<br><br><br>
 			<div class="row" >
 				<div class="col">
@@ -64,47 +64,186 @@
 					</ul>
 				</div>
 			</div>
+		</div> -->
+
+		
+
+
+<div class = "container" id="otele">
+			
+			<div class="row" >
+				<div class="col">
+					<p class="centralized"><img src="src/img/television.png" class="img-fluid"  alt=""></p>
+			<!-- 	</div>
+				<div class="col"> -->
+					<br><br><br><br>
+					<h1 >ТЫСЯЧИ КАНАЛОВ за <span class = "cuba" >890 тенге в месяц!</span></h1>
+					<p>Расшифровывается IPTV как Internet Protocol Television. То есть, как легко можно догадаться даже без знания иностранных языков — Телевидение по интернет протоколу.</p>
+
+					<ul>
+						<li>Подключение 2490 тг!</li>
+						<li>Первый месяц в подарок!</li>
+						<li>Единоразовая настройка!</li>
+					</ul>
+				</div>
+			</div>
 		</div>
+
+  <!-- <div class="blocked"><img src="src/img/television.png"class="card-img-top img-fluid minimize centralized " alt="..."></div>
+  <div class="card-body">
+    <h5 class="card-title">ТЫСЯЧИ КАНАЛОВ за <span class = "cuba" >890 тенге в месяц!</span></h5>
+    <p class="card-text">	<ul>
+				<li>Подключение 2490 тг!</li>
+				<li>Первый месяц в подарок!</li>
+				<li>Единоразовая настройка!</li>
+			</ul>
+		</p>
+
+  </div> -->
+
+
+
 
 		<br><br><br>
 
 		<div class="main_welcome">
-			<div class="container">
-				<h1><span class="cuba">ЛУЧШЕЕ КАЧЕСТВО</span> КАНАЛОВ!</h1>
-				<p>Новая эра телевидения позволяет воспроизводить сигнал высшего качества.</p>
-<div class="linel">
-				<ul>
-					<li>Гибкая настройка каналов!</li>
-					<li>Любимые каналы на первом месте!</li>
-					<li>Скрытие нежелательных каналов и контента!</li>
-				</ul>
+
+<h1><span class="cuba">ЛУЧШЕЕ КАЧЕСТВО</span> КАНАЛОВ!</h1>
+<p>Новая эра телевидения позволяет воспроизводить сигнал высшего качества.</p>
+<div class="">
+<ul class="">
+<li>- Гибкая настройка каналов!</li>
+<li>- Любимые каналы на первом месте!</li>
+<li>- Скрытие нежелательных каналов и контента!</li>
+</ul>
 </div>
 
-				<!-- <iframe width="auto" height="auto" src="https://www.youtube.com/embed/D0t1bR1Qjsg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-				<p style="background-color: white; color: black;"><b>НАЖМИТЕ!</b></p>
-				<img src=src/img/logoYT.png onclick='show_video();' class='img_video'/>
+<p style="color: white;" ><b class="h1 cuba" style="font-weight: 600">НАЖМИТЕ!</b></p>
+<img src=src/img/logoYT.png onclick='show_video();' class='img_video'/>
 
 
-				<div id="modal_form"><!-- Сaмo oкнo -->
-      <span class="modal_close">x</span> <!-- Кнoпкa зaкрыть -->
-      <!-- Тут любoе сoдержимoе -->
-        <center>
-        <iframe width="650" height="488" src="https://www.youtube.com/embed/D0t1bR1Qjsg" frameborder="0" allowfullscreen id='v1'></iframe>
-        </center>
+<div id="modal_form">
+<span class="modal_close">x</span> 
+
+<center>
+<iframe width="650" height="488" src="https://www.youtube.com/embed/D0t1bR1Qjsg" frameborder="0" allowfullscreen id='v1'></iframe>
+</center>
 </div>
- 
+
 <div id="overlay">
-</div><!-- Пoдлoжкa -->
+</div>
 
-			</div>
-		</div>
+</div>
+</div>
 <br><br>
+<div class="container borderless" style="margin-bottom: 20px;">
+<div class="row" align="center">
+
+<div class="col-md"><div class="card text-center aborder" style="width: 18rem; margin-bottom: 20px;">
+<img src="src/img/gift.png" alt="sale" class="card-img-top">
+<div class="card-body">
+<h5 class="card-title">ПОПРОБУЙТЕ БЕСПЛАТНО!</h5>
+<p class="card-text">Мы даем возможность безвозмездно ознакомиться со всеми преимуществами IPTV</p>
+
+</div>
+</div>
+</div>
+
+
+<div class="col-md"><div class="card text-center aborder" style="width: 18rem; margin-bottom: 20px;">
+<img src="src/img/sale.png" alt="sale" class="card-img-top">
+<div class="card-body">
+<h5 class="card-title">СКИДКИ</h5>
+<p class="card-text">Мы оперируем самыми последними событиями и гибко подстраиваемся под них! Ожидайте актуальные скидки и акции!</p>
+
+</div>
+</div>
+</div>
 
 
 
 
 
-	<div class="container">
+
+<div class="col-md"><div class="card text-center aborder" style="width: 18rem; margin-bottom: 20px;">
+<img src="src/img/incognito.png" alt="sale" class="card-img-top">
+<div class="card-body">
+<h5 class="card-title new1">КОНФИДЕНЦИАЛЬНОСТЬ</h5>
+<p class="card-text">Ваша личная информация в надежных руках, отправля данные нам мы гарантируем их сохранность от третьих лиц.</p>
+
+</div>
+</div>
+</div>
+
+
+<div class="col-md"><div class="card text-center aborder" style="width: 18rem;">
+<img src="src/img/use.png" alt="sale" class="card-img-top">
+<div class="card-body">
+<h5 class="card-title">УСЛОВИЯ ИСПОЛЬЗОВАНИЯ</h5>
+<p class="card-text">Минимальные требования к вам с нашей стороны, берите и пользуйтесь!</p>
+
+</div>
+</div>
+</div>
+
+
+</div>
+</div>
+
+<!-- <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+			  <ol class="carousel-indicators">
+			    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+			    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+			    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+			    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+			  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="src/img/gift.png" class="d-block w-35" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>ПОПРОБУЙТЕ БЕСПЛАТНО!</h5>
+        <p>Мы даем возможность безвозмездно ознакомиться со всеми преимуществами IPTV</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/sale.png" class="d-block w-35" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>СКИДКИ</h5>
+        <p>Мы оперируем самыми последними событиями и гибко подстраиваемся под них! Ожидайте актуальные скидки и акции!</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/incognito.png" class="d-block w-35" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>КОНФИДЕНЦИАЛЬНОСТЬ</h5>
+        <p>Ваша личная информация в надежных руках, отправля данные нам мы гарантируем их сохранность от третьих лиц.</p>
+      </div>
+    </div>
+
+     <div class="carousel-item">
+      <img src="src/img/use.png" class="d-block w-35" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>УСЛОВИЯ ИСПОЛЬЗОВАНИЯ</h5>
+        <p>Минимальные требования к вам с нашей стороны, берите и пользуйтесь!</p>
+      </div>
+    </div>
+  </div>
+
+  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+
+</div> -->
+
+
+
+
+	<!-- <div class="container">
 		<div class="row">
 				  <div class="col-sm-3 margincard">
 				    <div class="card aborder" style="width:18rem;">
@@ -112,55 +251,55 @@
 				      <div class="card-body">
 				        <h5 class="card-title">СКИДКИ</h5>
 				        <p class="card-text">Мы оперируем самыми последними событиями и гибко подстраиваемся под них! Ожидайте актуальные скидки и акции!</p>
-				       <!--  <a href="#" class="btn btn-primary">Go somewhere</a> -->
+				       <a href="#" class="btn btn-primary">Go somewhere</a>
 				      </div>
 				    </div>
 				  </div>
-
-
+	
+	
 				  <div class="col-sm-3 margincard">
 				    <div class="card aborder" style="width:18rem;">
 				    	 <img src="src/img/gift.png" class="card-img-top mincard img-fluid" alt="...">
 				      <div class="card-body">
 				        <h5 class="card-title">ПОПРОБУЙТЕ БЕСПЛАТНО!</h5>
 				        <p class="card-text">Мы даем возможность безвозмездно ознакомиться со всеми преимуществами IPTV</p>
-				        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+				        <a href="#" class="btn btn-primary">Go somewhere</a>
 				      </div>
 				    </div>
 				  </div>
-
+	
 				  <div class="col-sm-3 margincard">
 				    <div class="card aborder" style="width:18rem;">
 				    	 <img src="src/img/incognito.png" class="card-img-top mincard img-fluid" alt="...">
 				      <div class="card-body">
 				        <h5 class="card-title">КОНФИДЕНЦИАЛЬНОСТЬ</h5>
 				        <p class="card-text">Ваша личная информация в надежных руках, отправля данные нам мы гарантируем их сохранность от третьих лиц.</p>
-				       <!--  <a href="#" class="btn btn-primary">Go somewhere</a> -->
+				       <a href="#" class="btn btn-primary">Go somewhere</a>
 				      </div>
 				    </div>
 				  </div>
-
-
+	
+	
 				  <div class="col-sm-3 margincard">
 				    <div class="card aborder" style="width:18rem;">
 				    	 <img src="src/img/use.png" class="card-img-top mincard img-fluid" alt="...">
 				      <div class="card-body">
 				        <h5 class="card-title">УСЛОВИЯ ИСПОЛЬЗОВАНИЯ</h5>
 				        <p class="card-text">Минимальные требования к вам с нашей стороны, берите и пользуйтесь!</p>
-				       <!--  <a href="#" class="btn btn-primary">Go somewhere</a> -->
+				       <a href="#" class="btn btn-primary">Go somewhere</a>
 				      </div>
 				    </div>
 				  </div>
 				</div>
-		</div>
+		</div> -->
 
 
 		<div class="mainw" id="conect">
 			<h1>Связаться  с нами через <span style="color:lime">Whats'App:</span></h1>
-			<button type="button" class="btn btn-success btm-large maxi" style="text-align: center;"><a href="https://wa.me/77778683598?text=Хочу%20подключить%20IP-TV" class="whatsup">ПОДКЛЮЧИТЬСЯ</a></button>
-			
+			<button type="button" class="btn btn-success btm-large" align="center"><a href="https://wa.me/77778683598?text=Хочу%20подключить%20IP-TV" class="whatsup" style="font-size:23px;">ПОДКЛЮЧИТЬСЯ</a></button>
 		</div>
 
+<br><br>
 	<div class="container">
 		<div class="accordion" id="accordionExample">
   <div class="card ">
@@ -171,7 +310,7 @@
         </button>
       </h2>
     </div>
-
+</div>
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
         Команда программы технических консультаций "okTV" разработала эту политику конфиденциальности, чтобы дополнительно разъяснить порядок сбора и распространения информации на нашем Сайте (http://oktv.fun/). Как правило, Вы можете посещать открытые разделы нашего Сайта, не идентифицируя себя. Общая политика предусматривает сбор лишь той информации, которая необходима для участия в программе технических консультаций "okTV". Пользование нашим сайтом и становление нашим клиентом равнозначно Вашему подтверждению и принятию условий настоящей Политики конфиденциальности. 1. Информация, которую мы собираем 1.1. Мы получаем и храним предоставленные Вами личные сведения, а также определенную информацию, связанную с совершаемыми операциями, которую мы собираем в ходе использования/просмотра Вами разделов нашего сайта или нашими Услугами. Ниже представлен перечень основных методов, используемых нами для сбора личных данных и информации. 1.2. Регистрационная информация 1.2.1. Чтобы стать участником программы технических консультаций “okTV”, Вы должны указать свой номер телефона и согласиться с политикой конфиденциальности и условием использования сервиса. Процесс регистрации предусматривает обязательное предоставление определенной контактной информации (номер мобильного/сотового телефона). 2. Данные об использовании услуг 2.1. Когда Вы пользуетесь нашим сайтом или услугами, мы можем проводить автоматический сбор определенных видов, данных о том, как именно Вы им пользуетесь. 3. Данные, не являющиеся личными сведениями 3.1. Данные, не являющиеся личными сведениями — это информация, которую не представляется возможным соотнести с кем-либо конкретно. Данные, не являющиеся личными сведениями, могут включать в себя также обобщенную информацию о группе или категории услуг либо информацию о пользователе без упоминания каких-либо идентифицирующих сведений, которые можно было бы соотнести с ним. Такие данные могут включать в себя общие сведения о трафике, тенденции пользования, анонимные демографические сведения и данные исследований. Обобщенная информация помогает нам лучше понять тенденции и потребности наших пользователей, более целенаправленно разрабатывать новые функции и менять наш сайт. 3.2. При посещении открытых разделов нашего сайта мы не собираем информации о личности посетителя и иных личных сведений о нем. Однако, как уже упоминалось выше, на основании того, какие именно действия Вы совершаете у нас на сайте, мы собираем определенные сведения о Вашем трафике, не являющиеся личными. 4. Раскрытие личных сведений третьим лицам 4.1. Мы не сдаем в аренду, не продаем и не передаем в порядке обмена личные сведения иным физическим лицам и экономическим агентам, не являющимся нашими связанными сторонами, за исключением: передачи личных сведений с согласия пользователя для целей осуществления запрашиваемой им сделки (что требуется для совершения определенных коммерческих операций); случаев, когда раскрытия личных сведений требует действующее законодательство, а также в случаях, в которых раскрытие личных сведений оправдывается защитой наших прав и собственности. Ниже ситуации, оправдывающие раскрытие личных сведений, конкретизированы дополнительно.
@@ -207,7 +346,6 @@
     </div>
   </div>
 </div>
-	</div>
 
 
 
